Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntObjInteger.quorum
Integer i = cast(Integer, 5)
output i:GetValue()