Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjNumber.quorum
Integer i = cast(Integer, 7.5)